Fixing margins, especially on mobile/tablet

--- a/src/assets/scss/ofotigrid/_webmentions.scss
+++ b/src/assets/scss/ofotigrid/_webmentions.scss
@@ -6,16 +6,17 @@
   display:block;
   margin-top: 2em;
   margin-bottom: 0;
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
   h2, h3, h4 {
     text-align: center;
   }
   @media (prefers-color-scheme: dark) {
     border-top: 1px solid #fff;
   }
-  @media screen and (min-width: 1025px) {
+  @media screen and (min-width: 900px) {
     width: 50%;
-    margin-right: auto;
-    margin-left: auto;
   }
 }
 
